Refatorando codigo para versão 8 do Java